--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -15,8 +15,9 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/node-fetch": "^2.6.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^3.24.1"
+    "firebase-functions": "^4.1.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
