--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@types/node-fetch": "^2.6.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.1.1"
+    "firebase-functions": "^4.1.1",
+    "http-crud": "^4.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
