--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -2,10 +2,12 @@
   "name": "functions",
   "scripts": {
     "lint": "eslint --ext .js,.ts .",
+    "lint-fix": "eslint --ext .js,.ts . --fix",
     "build": "tsc",
     "build:watch": "tsc --watch",
     "serve": "npm run build && firebase emulators:start --only functions",
     "s": "firebase emulators:start --only functions",
+    "s-db": "firebase emulators:start --only database,functions",
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
@@ -18,7 +20,7 @@
   "dependencies": {
     "@types/node-fetch": "^2.6.2",
     "firebase-admin": "^10.0.2",
-    "firebase-functions": "^4.2.0",
+    "firebase-functions": "^4.2.1",
     "http-crud": "^4.0.0"
   },
   "devDependencies": {
