--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -11,7 +11,8 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "upload": " npm run lint-fix && npm run build && firebase deploy --only functions"
   },
   "engines": {
     "node": "16"
