--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -22,7 +22,8 @@
     "@types/node-fetch": "^2.6.4",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.4.1",
-    "http-crud": "^4.0.0"
+    "http-crud": "^4.0.0",
+    "nodemailer": "^6.9.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.12.0",
