--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -12,7 +12,7 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "upload": " npm run lint-fix && npm run build && firebase deploy --only functions"
+    "up": " npm run lint-fix && npm run build && firebase deploy --only functions"
   },
   "engines": {
     "node": "16"
