--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -19,6 +19,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@google-cloud/secret-manager": "^5.3.0",
     "@types/node-fetch": "^2.6.11",
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.7.0",
