--- a/sanimapp_functions/package.json
+++ b/sanimapp_functions/package.json
@@ -26,7 +26,7 @@
     "@google-cloud/secret-manager": "^5.3.0",
     "@types/node-fetch": "^2.6.11",
     "firebase-admin": "^12.4.0",
-    "firebase-functions": "^5.1.1",
+    "firebase-functions": "5.1",
     "http-crud": "^4.0.0",
     "nodemailer": "^6.9.4"
   },
